Bug 342425 - "nsCaseConversionImp2 leaking 2 nsCompressedMap objects". r+sr=bz.