intl/unicharutil/src/nsCaseConversionImp2.h
@@ -49,7 +49,7 @@ class nsCaseConversionImp2 : public nsICaseConversion {
   NS_DECL_ISUPPORTS 
 
 public:
-  nsCaseConversionImp2() { };
+  nsCaseConversionImp2();
   virtual ~nsCaseConversionImp2() { };
 
 
